@@ -289,6 +289,22 @@ name|hadoop
 operator|.
 name|hbase
 operator|.
+name|util
+operator|.
+name|Bytes
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
 name|zookeeper
 operator|.
 name|ZKUtil
@@ -423,6 +439,72 @@ block|{
 name|initTableMapperJob
 argument_list|(
 name|table
+argument_list|,
+name|scan
+argument_list|,
+name|mapper
+argument_list|,
+name|outputKeyClass
+argument_list|,
+name|outputValueClass
+argument_list|,
+name|job
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * Use this before submitting a TableMap job. It will appropriately set up    * the job.    *    * @param table Binary representation of the table name to read from.    * @param scan  The scan instance with the columns, time range etc.    * @param mapper  The mapper class to use.    * @param outputKeyClass  The class of the output key.    * @param outputValueClass  The class of the output value.    * @param job  The current job to adjust.  Make sure the passed job is    * carrying all necessary HBase configuration.    * @throws IOException When setting up the details fails.    */
+specifier|public
+specifier|static
+name|void
+name|initTableMapperJob
+parameter_list|(
+name|byte
+index|[]
+name|table
+parameter_list|,
+name|Scan
+name|scan
+parameter_list|,
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|TableMapper
+argument_list|>
+name|mapper
+parameter_list|,
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|WritableComparable
+argument_list|>
+name|outputKeyClass
+parameter_list|,
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|Writable
+argument_list|>
+name|outputValueClass
+parameter_list|,
+name|Job
+name|job
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|initTableMapperJob
+argument_list|(
+name|Bytes
+operator|.
+name|toString
+argument_list|(
+name|table
+argument_list|)
 argument_list|,
 name|scan
 argument_list|,
@@ -577,6 +659,75 @@ name|job
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+comment|/**    * Use this before submitting a TableMap job. It will appropriately set up    * the job.    *    * @param table Binary representation of the table name to read from.    * @param scan  The scan instance with the columns, time range etc.    * @param mapper  The mapper class to use.    * @param outputKeyClass  The class of the output key.    * @param outputValueClass  The class of the output value.    * @param job  The current job to adjust.  Make sure the passed job is    * carrying all necessary HBase configuration.    * @param addDependencyJars upload HBase jars and jars for any of the configured    *           job classes via the distributed cache (tmpjars).    * @throws IOException When setting up the details fails.    */
+specifier|public
+specifier|static
+name|void
+name|initTableMapperJob
+parameter_list|(
+name|byte
+index|[]
+name|table
+parameter_list|,
+name|Scan
+name|scan
+parameter_list|,
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|TableMapper
+argument_list|>
+name|mapper
+parameter_list|,
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|WritableComparable
+argument_list|>
+name|outputKeyClass
+parameter_list|,
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|Writable
+argument_list|>
+name|outputValueClass
+parameter_list|,
+name|Job
+name|job
+parameter_list|,
+name|boolean
+name|addDependencyJars
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|initTableMapperJob
+argument_list|(
+name|Bytes
+operator|.
+name|toString
+argument_list|(
+name|table
+argument_list|)
+argument_list|,
+name|scan
+argument_list|,
+name|mapper
+argument_list|,
+name|outputKeyClass
+argument_list|,
+name|outputValueClass
+argument_list|,
+name|job
+argument_list|,
+name|addDependencyJars
+argument_list|)
+expr_stmt|;
 block|}
 comment|/**    * Writes the given scan into a Base64 encoded string.    *    * @param scan  The scan to write out.    * @return The scan saved in a Base64 encoded string.    * @throws IOException When writing the scan fails.    */
 specifier|static
